2005-06-28  Roland Illig  <roland.illig@gmx.de>

	* view.c: Simplified error handling when loading files.

2005-06-27  Roland Illig  <roland.illig@gmx.de>

	* view.c: Massive speed-ups by reordering statements and declaring
	functions as inline.
	* view.c: Renamed view_quit to want_to_quit and changed its type
	to gboolean.
	* view.c: Eliminated the need for function pointer casts.

2005-06-22  Pavel Tsekov  <ptsekov@gmx.net>

	* main.h: Export edit_one_file.
	* main.c (setup_dummy_mc): Remove dummy dir_list and remove argument.
	* main.c (mc_maybe_editor_or_viewer): Fix a double free and restructure
	according to fixes to setup_dummy_mc().
	* dir.c (expand_format): Use edit_widget->filename as fname when
	invoked as mcedit.

2005-06-21  Pavel Roskin  <proski@gnu.org>

	* view.c (view_percent): Remove unused variable.

2005-06-14  Roland Illig  <roland.illig@gmx.de>

	* achown.c (advanced_chown_callback): Swapped the arguments of a
	recursive function call -- the types didn't match.
	* widget.h (buttonbar_clear_label): Added.
	* widget.c: Likewise.
	* help.c: Use buttonbar_clear_label().
	* tree.c: Likewise.
	* widget.c: Added code to handle multiple types of functions for
	commands.
	* widget.h: Likewise.
	* widget.h (struct WButtonBar): Moved into widget.c.
	* widget.c (struct WButtonBar): Moved from widget.h.
	* boxes.c: Don't dereference WButtonBar.
	* help.c: Likewise.
	* layout.c: Likewise.
	* view.c: Likewise.
	* view.c: Fixed an integer wraparound bug.
	* view.c (view_get_filesize_with_exact): Removed. The replacement
	function is view_may_still_grow(), which does not overlap with
	view_get_filesize().

2005-06-08  Roland Illig  <roland.illig@gmx.de>

	* util.h (free_after): Moved to vfs/smbfs.c, as this is the only
	place where it is used. This is necessary because the SunPro
	compiler creates external references even for functions that are
	only referred to in unused inline functions.

2005-06-07  Leonard den Ottolander  <leonard den ottolander nl>
